@@ -34,7 +34,7 @@ import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.security.GeneralSecurityException;
 import java.security.MessageDigest;
 import java.text.DecimalFormat;
@@ -1830,7 +1830,7 @@ public class VoiceManagerImportBatchPanel extends JPanel implements Titled, Init
 						ObjectMap.setObject(objectMap, Voice.class, voice);
 						//
 						ObjectMap.setObject(objectMap, File.class, testAndApply(Objects::nonNull, voice,
-								x -> Paths.get(folder.getAbsolutePath(), getFilePath(x)).toFile(), x -> folder));
+								x -> Path.of(folder.getAbsolutePath(), getFilePath(x)).toFile(), x -> folder));
 						//
 						importVoice(objectMap, errorMessageConsumer, throwableConsumer);
 						//
@@ -1863,8 +1863,8 @@ public class VoiceManagerImportBatchPanel extends JPanel implements Titled, Init
 		//
 		if (StringUtils.isNotBlank(filePath)) {
 			//
-			if (!(it.file = Paths.get(filePath).toFile()).exists()
-					&& !(it.file = Paths.get(folder.getAbsolutePath(), filePath).toFile()).exists()) {
+			if (!(it.file = Path.of(filePath).toFile()).exists()
+					&& !(it.file = Path.of(folder.getAbsolutePath(), filePath).toFile()).exists()) {
 				//
 				it.file = null;
 				//
@@ -3304,12 +3304,12 @@ public class VoiceManagerImportBatchPanel extends JPanel implements Titled, Init
 				final StringBuilder fileName = new StringBuilder(
 						String.format("%1$tY%1$tm%1$td_%1$tH%1$tM%1$tS_%1$tL.%2$s", new Date(), fileExtension));
 				//
-				File file = Paths.get(voiceFolder, filePath = Util.toString(fileName)).toFile();
+				File file = Path.of(voiceFolder, filePath = Util.toString(fileName)).toFile();
 				//
 				if (file.exists()) {
 					//
-					file = Paths
-							.get(voiceFolder, filePath = Util.toString(fileName
+					file = Path
+							.of(voiceFolder, filePath = Util.toString(fileName
 									.insert(StringUtils.lastIndexOf(fileName, '.') + 1, randomAlphabetic(2) + ".")))
 							.toFile();
 					//
@@ -3323,7 +3323,7 @@ public class VoiceManagerImportBatchPanel extends JPanel implements Titled, Init
 				//
 			} else {
 				//
-				final File file = Paths.get(voiceFolder, getFilePath(voiceOld)).toFile();
+				final File file = Path.of(voiceFolder, getFilePath(voiceOld)).toFile();
 				//
 				if (!file.exists()) {
 					//
