@@ -3,7 +3,7 @@ package org.springframework.beans.factory;
 import java.io.File;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Map;
 import java.util.function.Predicate;
 
@@ -61,7 +61,7 @@ class CentralJapanRailwayKanjiHiraganaMapFactoryBeanTest {
 		//
 		if (instance != null) {
 			//
-			instance.setUrl(Util.toString(Paths.get("pom.xml").toFile().toURI().toURL()));
+			instance.setUrl(Util.toString(Path.of("pom.xml").toFile().toURI().toURL()));
 			//
 		} // if
 			//
