@@ -2,7 +2,7 @@ package org.springframework.context.support;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.AssertionsUtil;
@@ -46,7 +46,7 @@ class SpeechApiSpeechServerImplTest {
 				"{localizedMessage=Invalid memory access, message=Invalid memory access}",
 				() -> instance.writeVoiceToFile(null, null, 0, 0, null));
 		//
-		final File file = Paths.get(".").toFile();
+		final File file = Path.of(".").toFile();
 		//
 		AssertionsUtil.assertThrowsAndEquals(Error.class,
 				"{localizedMessage=Invalid memory access, message=Invalid memory access}",
